# trip_building

./: LICENSE  README.md  pyproject.toml
trip_building/: constants.py  load_data.py  reporting_trip_request_extract_types.json
trip_building/exploration/: create_date_analysis.py  data_profiling.py  experiences.py  manual_investigation_of_types.py  preferred_date_analysis.py  quick_exploration.py
