[tool.poetry]
name = "trip-building"
version = "0.1.0"
description = ""
authors = ["Rafael Dias <rafaelagd@gmail.com>"]
readme = "README.md"
packages = [{include = "trip_building"}]

[tool.poetry.dependencies]
python = "3.9.17"
ydata-profiling = "4.6.4"
numpy = "1.25.2"
pandas = "2.2.0"
seaborn = "0.12.2"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
isort = "^5.13.2"
mypy = "^1.8.0"
black = "^24.1.1"
prospector = {extras = ["all"], version = "^1.10.3"}
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.taskipy.tasks]
data_profiling = "python trip_building/exploration/data_profiling.py"
create_date_analysis = "python trip_building/exploration/create_date_analysis.py"
preferred_date_analysis = "python trip_building/exploration/preferred_date_analysis.py"
preferred_experience_analysis = "python trip_building/exploration/experiences.py"
run_all = "task data_profiling && task create_date_analysis && task preferred_date_analysis && task preferred_experience_analysis"